tests/fixtures/pass/generic_type_application_partial.sali
let identity(T: type)(move value: T): T = value

let main(): i32 = {
  let identity_i32 = identity(i32)
  identity_i32(42)
}
