tests/fixtures/fail/infer_incomplete_application.sali
let identity(T: type)(move value: T): T = value

let main(): i32 = {
  let pending = identity(_)
  pending(42)
}
